...
            verticalArrangement = Arrangement.SpaceEvenly,
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            Column {
                val widthFraction = 0.9f

                TaskTextField(
                    modifier = Modifier
                        .fillMaxWidth(widthFraction),
                    value = viewModelState.taskTextFieldValue,
                    enabled = !viewModelState.isClockRunning,
                    onTaskNameChange = viewModelState::onTaskNameChange,
                    onImeAction = {
...
                    isRunning = viewModelState.isClockRunning,
                    currSeconds = viewModelState.currSeconds,
                    finishedListener = viewModelState.onTimerAnimationFinish
                )
            }

            StartTimerButton(
                modifier = Modifier.testTag("StartTimerButton"),
                clockEnabled = viewModelState.clockButtonEnabled,
                isRunning = viewModelState.isClockRunning,
                startClock = viewModelState::onClockStart,
                stopClock = viewModelState::onClockStop
            )
...
