...
    <string name="task_saved_toast">Task \"%s\" saved!</string>
    <string name="task_text_field_label">Apa yang ingin anda lakukan ?</string>
    <string name="task_text_field_placeholder">Sekarang, saya ingin ....</string>
    <string name="battery_warning_dialog_title">Update battery usage settings</string>
    <string name="battery_warning_dialog_body">The count down alarm may not work properly with your device\'s current battery settings.\n\nPlease allow TimeClock to run in the background to ensure the count down alarm works as intended.</string>
    <string name="battery_warning_dialog_action">Request Permission</string>
    <string name="start">Mulai</string>
    <string name="stop">Berhenti</string>
    <string name="timer_divider">:</string>
    <string name="list_page_nothing_here">Sepertinya kosong, mulai beraktivitas untuk memulai daftar riwayat!</string>
    <string name="list_page_in_progress">sedang dalam proses</string>
    <string name="start_time">Waktu Mulai</string>
    <string name="end_time">Waktu Selesai</string>
...
