...
        modifier = modifier.fillMaxWidth(),
    ) {
        val (startButton, text, endButton) = createRefs()
        if (startButtonVisible) {
            IconButton(
                modifier = Modifier
                    .testTag("TimeRangeSelector_Start")
                    .constrainAs(startButton) {
                        start.linkTo(parent.start)
                        centerVerticallyTo(parent)
                    },
                onClick = startButtonFunction
            ) {
...
            style = MaterialTheme.typography.h6,
            textAlign = TextAlign.Center
        )
        if (endButtonVisible) {
            IconButton(
                modifier = Modifier
                    .testTag("TimeRangeSelector_End")
                    .constrainAs(endButton) {
                        end.linkTo(parent.end)
                        centerVerticallyTo(parent)
                    },
                onClick = endButtonFunction
            ) {
...
